--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,25 @@
 # main links links
 main:
+  - title: "Curriculum Vitae"
+    url: /cv/
+
   - title: "Publications"
     url: /publications/
 
   - title: "Presentations"
-    url: /presentations/    
+    url: /presentations/ 
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Contact"
+    url: /contact/ 
+
+#  - title: "Teaching"
+#    url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+#  - title: "Portfolio"
+#    url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Blog Posts"
+#    url: /year-archive/
+#    
+#  - title: "Guide"
+#    url: /markdown/
