--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Yang Ma"
 title_separator          : "-"
-name                     : &name "Yang Ma (马杨)"
+name                     : &name "Yang Ma"
 description              : &description "Ph.D. student at University of Pittsburgh"
 url                      : https://yangphy.github.io #http://127.0.0.1:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yang Ma"
+  name             : "Yang Ma  (马杨)"
   avatar           : "profile.png"
   bio              : "Ph.D. Student at Univsrsity of Pittsburgh"
   location         : "Pittsburgh, PA"
