update to October 2022

--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Yang Ma  (马杨)"
   avatar           : "profile.png"
   bio              : "Postdoc researcher at INFN"
-  location         : "Madison, WI"
+  location         : "Bologna,, Italy"
 #  employer         :  "Univsrsity of Pittsburgh"
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=td4jffcAAAAJ&hl=en"
-  email            : "mayangluon@pitt.edu"
+  email            : "yang.ma@bo.infn.it"
   researchgate     :  "https://www.researchgate.net/profile/Yang-Ma-21"
   uri              :
   bitbucket        :
