--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yang Ma  (马杨)"
   avatar           : "profile.png"
   bio              : "Postdoc researcher at INFN"
-  location         : "Bologna,, Italy"
+  location         : "Bologna, Italy"
 #  employer         :  "Univsrsity of Pittsburgh"
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=td4jffcAAAAJ&hl=en"
