--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yang Ma"
 title_separator          : "-"
 name                     : &name "Yang Ma"
-description              : &description "Postdoc researcher at INFN"
+description              : &description "F.R.S-FNRS Postdoc Fellow at UCLouvain"
 url                      : https://yangphy.github.io #http://127.0.0.1:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "YangPhy.github.io"
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Yang Ma  (马杨)"
   avatar           : "profile.png"
-  bio              : "Postdoc researcher at INFN"
-  location         : "Bologna, Italy"
+  bio              : "F.R.S-FNRS Postdoc Fellow at UCLouvain"
+  location         : "Louvain-la-Neuve, Belgium"
 #  employer         :  "Univsrsity of Pittsburgh"
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=td4jffcAAAAJ&hl=en"
