--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yang Ma"
 title_separator          : "-"
 name                     : &name "Yang Ma"
-description              : &description "F.R.S-FNRS Postdoc Fellow at UCLouvain"
+description              : &description "Postdoc Fellow at UCLouvain"
 url                      : https://yangphy.github.io #http://127.0.0.1:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "YangPhy.github.io"
