--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yang Ma  (马杨)"
   avatar           : "profile.png"
-  bio              : "F.R.S-FNRS Postdoc Fellow at UCLouvain"
+  bio              : "Postdoc Fellow at UCLouvain"
   location         : "Louvain-la-Neuve, Belgium"
 #  employer         :  "Univsrsity of Pittsburgh"
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
