update email address

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
 #  employer         :  "Univsrsity of Pittsburgh"
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=td4jffcAAAAJ&hl=en"
-  email            : "yang.ma@bo.infn.it"
+  email            : "yang.ma@uclouvain.be"
   researchgate     :  "https://www.researchgate.net/profile/Yang-Ma-21"
   uri              :
   bitbucket        :
